# assessment_client

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
examples/: matrix_example.xlsx  qa_example.xlsx
modules/: api_client.py  config.py  processing.py
src/assessment_client/: app.py
src/assessment_client/examples/: answers.xlsx  default_competencies.json  logic.xlsx  matrix.xlsx  matrix_example.xlsx  qa_example.xlsx  stat_logic_example.xlsx  stat_raw_example.xlsx  statements_example.xlsx
src/assessment_client/examples/ipr/: answers.xlsx
src/assessment_client/modules/: api_client.py  config.py  data_models.py  processing.py  utils.py  validation.py
src/assessment_client/pages/: 1_matrix_request.py  all_tasks.py  assessment_report.py  create_assessment.py  dilemma_check.py  matrix_competencies.py  statements_check.py
tests/: test_send_to_api.py  test_validate.py
